# spotify-mpd

./: .gitignore  .spotify_token_cache.json  Cargo.toml  README.md  TODO.md  config.toml.example
src/: config.rs  main.rs  mpd.rs  queue.rs  redirect_uri.rs  respot.rs  spotify.rs  track.rs
src/mpd/: mod.rs  mpd_commands.rs
src/respot/: mod.rs  player_worker.rs
src/spotify/: mod.rs
