[package]
name = "spotify-mpd"
version = "0.1.0"
authors = ["Daniel Liljeberg <liljebergxyz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.9"
toml = "0.5.6"
regex = "1.3.6"
anyhow = "1.0"
async-trait = "0.1"
lazy_static = "1.4.0"
librespot = "0.1"
base64 = "0.10"
env_logger =  {version = "0.6", default-features = false, features = ["termcolor","humantime","atty"]}
futures = { version = "0.3", features = ["compat"] }
futures_01 = { version = "0.1", package = "futures" }
hyper = "0.11"
log = "0.4"
num-bigint = "0.2"
protobuf = "2.8.1"
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
tokio-timer = "0.2"
url = "1.7"
sha-1 = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bus = "2.2"
net2 = "0.2"